--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Implements a demonstrative firefox add-on in Clojurescript.
+Demonstrates a Firefox add-on in Clojurescript.
 
 The add-on surrounds the pages of mozilla.org with a margin and a border.
